# Linear-Algebra-Utilities-C

./: .gitignore  CMakeLists.txt  README.md  cancel.c  cancel.h  input.c  input.h  linalg.c  linalg.h  main.c  main.out
apps/: benchmark.c  la_cli.c  la_cli_legacy.c
include/: input.h  la_matrix.h  la_ops.h  la_solve.h  linalg.h
src/: input.c  la_legacy_linalg.c  la_matrix.c  la_ops.c  la_solve.c
tests/: test_la.c
